UIIN-894: Add permission to mark items with four new statuses

--- a/package.json
+++ b/package.json
@@ -680,6 +680,38 @@
         "visible": true
       },
       {
+        "permissionName": "ui-inventory.items.mark-unknown",
+        "displayName": "Inventory: Mark items unknown",
+        "subPermissions": [
+          "inventory.items.item.mark-unknown.post"
+        ],
+        "visible": true
+      },
+      {
+        "permissionName": "ui-inventory.items.mark-unavailable",
+        "displayName": "Inventory: Mark items unavailable",
+        "subPermissions": [
+          "inventory.items.item.mark-unavailable.post"
+        ],
+        "visible": true
+      },
+      {
+        "permissionName": "ui-inventory.items.mark-long-missing",
+        "displayName": "Inventory: Mark items long missing",
+        "subPermissions": [
+          "inventory.items.item.mark-long-missing.post"
+        ],
+        "visible": true
+      },
+      {
+        "permissionName": "ui-inventory.items.mark-in-process-non-requestable",
+        "displayName": "Inventory: Mark items in process (non-requestable)",
+        "subPermissions": [
+          "inventory.items.item.mark-in-process-non-requestable.post"
+        ],
+        "visible": true
+      },
+      {
         "permissionName": "ui-inventory.single-record-import",
         "displayName": "Inventory: Import single bibliographic records",
         "subPermissions": [
