--- a/package.json
+++ b/package.json
@@ -766,6 +766,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-intl": "^5.8.0",
+    "react-query": "^3.6.0",
     "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
     "sinon": "^7.0.0"
@@ -794,6 +795,7 @@
     "@folio/stripes": "^6.0.0",
     "react": "*",
     "react-intl": "^5.8.0",
+    "react-query": "^3.6.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1"
   },
