UIIN-1511: Update circulation interface dependency to support v11

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
       "holdings-sources": "1.0",
       "users": "15.0",
       "location-units": "2.0",
-      "circulation": "9.0 10.0",
+      "circulation": "9.0 10.0 11.0",
       "configuration": "2.0",
       "tags": "1.0",
       "inventory-record-bulk": "1.0",
